# TkSessionManager

./: .gitignore  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  README  README.md  TkSessionManager.desktop  TkSessionManager.sh  bootstrap  configure.ac
BuildData/: Makefile.am
Doc/: Makefile.am
Doc/User/: COPYING.tex  DialogBoxes.tex  Doxyfile.in  Introduction.h  Introduction.tex  Makefile.am  MyTitlepage.sty  Preface.h  Preface.tex  Reference.h  Reference.tex  Tutorial.h  Tutorial.tex  UserManual.h  UserManual.tex
Scripts/: BWStdMenuBar.tcl  HTMLHelp.tcl  Makefile.am  ReadConfiguration.tcl  TKSessionCommandMenu.tcl  TKSessionPipeIO.tcl  TKSessionPreferences.tcl  TkSessionManager.tcl  fileentry.tcl  labelcombobox.tcl  labelselectcolor.tcl  labelspinbox.tcl  splash.tcl
SigTrap/: Makefile.am  sigtrap.i
glib_schema/: Makefile.am  org.tk.sessionmanager.gschema.xml.in
glib_tcl/: Makefile.am  glib_tcl.i
